# photo-clock

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  circuitpython-requirements.txt  pyproject.toml  tasks.py
digits/: README.md  prepare_bitmaps.py
docs/: README.md  wiring.yml
docs/img/: wiring.bom.tsv  wiring.html
scratch/: check_display.py  check_sd.py  scan_i2c.py  test_rtc.py
src/: code.py
typings/: adafruit_ds3231.pyi  adafruit_ili9341.pyi  fourwire.pyi  rainbowio.pyi
typings/adafruit_display_text/: label.pyi
typings/board/: __init__.pyi
