[project]
name = "photo-clock"
version = "0.1.0"
description = "CircuitPython photo clock for RP2040"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "ruff",
    "mpremote",
    "circup",
    "circuitpython-stubs",
    "invoke",
    "mypy>=1.19.1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Ignore missing imports — CircuitPython libs aren't available on the host
ignore = ["F401", "F821", "E402"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
