[project]
name = "photo-clock"
version = "0.1.0"
description = "CircuitPython photo clock for RP2040"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "ruff",
    "mpremote",
    "circup",
    "circuitpython-stubs",
    "invoke",
    "mypy>=1.19.1",
    "wireviz>=0.4.1",
    "pillow",
    "requests",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Ignore missing imports — CircuitPython libs aren't available on the host
ignore = ["F401", "F821", "E402"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
mypy_path = ["typings"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "adafruit_ds3231",
    "adafruit_ili9341",
    "adafruit_display_text.*",
]
ignore_missing_imports = true
